bk_ida/gccida/g1/store_fixed_bit_field
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_fixed_bit_field/src/expmed.c:1175:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v10; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_fixed_bit_field/src/expmed.c:1179:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode best_mode; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_fixed_bit_field/src/expmed.c:1180:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v15; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_fixed_bit_field/src/expmed.c:1186:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v21; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_fixed_bit_field/src/expmed.c:1197:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v32; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_fixed_bit_field/src/expmed.c:1225:75: error: invalid suffix 'xmode' on integer constant
if ( !v11 || ( v10 = ( unsigned __int8)v10, v11 > mode_bitsize[*(short *)0xmode]) ) 
                                                                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_fixed_bit_field/src/expmed.c:1226:18: error: invalid suffix 'xmode' on integer constant
v10 = *(short *)0xmode; 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_fixed_bit_field/src/expmed.c:1227:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v12 = ( __int64)op0[1]; 
                ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_fixed_bit_field/src/expmed.c:1254:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v25.rtwint = ( __int64)v9->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_fixed_bit_field/src/expmed.c:1333:21: error: use of undeclared identifier 'machine_mode'
v9 = gen_lowpart( ( machine_mode)v20, v9); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_fixed_bit_field/src/expmed.c:1335:25: error: use of undeclared identifier 'machine_mode'
v9 = convert_to_mode( ( machine_mode)v20, v9, 1); 
                        ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_fixed_bit_field/src/obj/expmed.o] Error 1
